--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="main">
         <h1>Онлайн магазин</h1>
-        <img src="https://pbs.twimg.com/media/DzMesPcXcAUKl0P.jpg:large">
+        <img src="https://pbs.twimg.com/media/DzMesPcXcAUKl0P.jpg:larg">
         <p>Оч важная штука</p>
         <button id="buy">Купить</button>
     </div>
